added get all backends route
