# server/restAPI/routes/backends.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/Dpbm/quantumRestAPI/types"
 	"github.com/Dpbm/quantumRestAPI/utils"
+	"github.com/Dpbm/shared/format"
 	logger "github.com/Dpbm/shared/log"
 	"github.com/gin-gonic/gin"
 )
@@ -42,6 +43,43 @@ func GetBackend(context *gin.Context) {
 	if err != nil {
 		logger.LogError(err)
 		context.JSON(404, map[string]string{"msg": "Could not find the required backend"})
+		return
+	}
+
+	context.JSON(200, result)
+}
+
+// @BasePath /api/v1
+// @version 1.0
+// @Summary get all backends
+// @Schemes http
+// @Description get all data from backends
+// @Tags backends
+// @Param cursor query int false "Last id(pointer) gotten from db"
+// @Produce json
+// @Success 200 {object} []types.BackendData
+// @Failure 500 {object} map[string]string "Failed during DB connection"
+// @Router /backends [get]
+func GetBackends(context *gin.Context) {
+	cursor := context.Query("cursor")
+	cursorValue, err := format.StrToUint(cursor)
+
+	if err != nil {
+		logger.LogError(err)
+		cursorValue = 0
+	}
+
+	db, ok := utils.GetDBFromContext(context)
+	if !ok || db == nil {
+		logger.LogError(errors.New("failed on get DB from context"))
+		context.JSON(500, map[string]string{"msg": "Failed on Stablish database connection!"})
+		return
+	}
+
+	result, err := db.GetBackends(cursorValue)
+	if err != nil {
+		logger.LogError(err)
+		context.JSON(200, map[any]any{})
 		return
 	}
 
